--- a/styles.css
+++ b/styles.css
@@ -228,14 +228,34 @@ body {
 
 .checkoutItem{
   text-align: left;
-  padding-left: 10px;
+  padding-left: 0px;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .cartButton{
-  height:17px; 
+  height:25px;
+  width:25px; 
   margin-right:20px;
+  border-radius:10px;
+  background-color: red;
+  color:black;
+  padding-left: auto;
+  padding-right:auto;
+  font-weight: bold;
+  position:relative;
+  top: -4px;
+  margin-bottom:3px;
+  font-size:15px;
+}
+
+.cartButton:hover{
+  height:31px;
+  width:31px;
+  margin-right:14px;
+  margin-bottom:0px;
+  border-radius:15px;
+  font-size:18px;
 }
 
 @keyframes checkoutOpen{
