--- a/styles.css
+++ b/styles.css
@@ -456,6 +456,8 @@ body {
 /* Buttons for changing image.*/
 .featuredReviewSideButton{
   background-color: rgb(0,0,0);
+  background-image: url("backgroundmenu.jpg");
+
   color: white;
   display: inline-block;
   vertical-align: bottom;
@@ -473,6 +475,7 @@ body {
 /* Buttons for changing image.*/
 .featuredReviewSideLeftButton{
   background-color: rgb(0,0,0);
+  background-image: url("backgroundmenu.jpg");
   color: white;
   display: inline-block;
   vertical-align: bottom;
@@ -490,10 +493,13 @@ body {
 
 .featuredReviewSideButton:hover{
   background-color:rgb(45, 45, 45);
+  background-image: url("background.jpg");
 }
 
 .featuredReviewSideLeftButton:hover{
   background-color:rgb(45, 45, 45);
+    background-image: url("background.jpg");
+
 }
 
 /* Big image button.*/
