--- a/styles.css
+++ b/styles.css
@@ -538,6 +538,7 @@ body {
   background-image: url("backgroundmenu.jpg");
   border-radius: 25px;
   width: 90%;
+  height:90%;
   margin-left:5%;
 }
 
