--- a/styles.css
+++ b/styles.css
@@ -1027,7 +1027,7 @@ overflow: scroll;
 .cart1 label{
  
   color: rgb(187,134,252);
-  font-size: large;
+  font-size: xlarge;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }  
@@ -1040,11 +1040,38 @@ overflow: scroll;
   font-weight: bold;
 }
 
+
+.cart2 input{
+
+  margin-top: 15px;
+  margin-right: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  width: auto;
+  border-radius: 10px;
+  height: 30px;
+
+}
+
+
+
+.cart2 option{
+
+  margin-top: 15px;
+  margin-right: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  width: auto;
+  border-radius: 10px;
+  height: 30px;
+
+}
+
 .cart2 {
-  width:22%;
+  width:20%;
   float:left;
   height: 70%;
-  padding-left: 12%;
+  padding-left: 14%;
   padding-right: 12%;
   border: 1px solid white;
   color: rgb(187,134,252);
@@ -1062,7 +1089,7 @@ overflow: scroll;
 .cart2 label{
  
   color: rgb(187,134,252);
-  font-size: large;
+  font-size: x-large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }  
