--- a/styles.css
+++ b/styles.css
@@ -985,6 +985,7 @@ body {
   border: 1px solid white;
   color: rgb(187,134,252);
   grid-area: cart1;
+  overflow-y:scroll;
 }
 
 
@@ -1080,6 +1081,7 @@ overflow: scroll;
   border: 1px solid white;
   color: rgb(187,134,252);
   grid-area: cart2;
+  overflow-y:scroll;
 }
 
 .cart2 h1{
