--- a/styles.css
+++ b/styles.css
@@ -641,7 +641,19 @@ body {
 
 
 
-
+.modal5 {
+  display: none;
+  font-family: Arial, Helvetica, sans-serif;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 150%;
+  overflow: auto;
+  background-color: rgba(5,5,5,0.7);
+  padding: 60px;
+}
 
 .modal4 {
   display: none;
