--- a/styles.css
+++ b/styles.css
@@ -385,9 +385,9 @@ body {
 
 .socialMenu{
   position: sticky;
-  background-image: url("background.jpg");
-  background-color: none;
-  color: rgb(25,25,25);
+  /* background-image: url("background.jpg"); */
+  background-color: rgb(82 39 157);
+  color: rgb(82 39 157);
   border-radius: 25px;
   list-style-type: none;
   padding: 0;
