Centered proceed to checkout

--- a/styles.css
+++ b/styles.css
@@ -212,6 +212,7 @@ body {
   position: absolute;
   bottom: 20px;
   right: 10px;
+  margin-left:23%;
   left: 10px;
   color: black;
   background-color: #03DAC5;
