--- a/styles.css
+++ b/styles.css
@@ -1100,7 +1100,7 @@ overflow: scroll;
 .cart2 h1{
   text-align: center;
   color: rgb(187,134,252);
-  font-size: xx-large;
+  font-size: 50px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
