--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,8 @@ body {
   background-color: none;
   grid-area: header;
   vertical-align: center;
+  margin-top:5px;
+  margin-bottom:0px;
 }
 
 .title {
@@ -57,6 +59,7 @@ body {
 /* Reviews on the left side.*/
 .socialMenu {
   grid-area: menu;
+  overflow:hidden;
 }
 
 /* Main featured review. */
@@ -109,8 +112,8 @@ body {
   display: inline-block;
   padding-top: 3px;
   height:auto;
-  width:375px; /* use this to center */
-  left: 18%;
+  width:200px; /* use this to center */
+  left: 23%;
   margin-left: calc(40% - 150px);
   text-align:center;
   top:0%;
@@ -320,8 +323,12 @@ body {
   border-width: 2px;
   border-color: white;
   margin-left: 15px;
-  font-size: 30px;
-  padding: 5px 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top:0px;
+  margin-top:0px;
+  position:relative;
+  top:-15px;
 }
 
 .topNavBar a:hover {
@@ -1194,8 +1201,9 @@ overflow: scroll;
 }
 
 #resultsHeader{
-  margin-top: 1%;
-  font-size: 40px;
+  font-size: 30px;
+  position: relative;
+  top:-5px;
 }
 
 
