--- a/styles.css
+++ b/styles.css
@@ -211,16 +211,16 @@ body {
 }
 
 #checkoutDropDown{
-  width: 500px;
-  height: 500px;
+  width: 22vw;
+  height: 55vh;
   float: right;
   background-color: rgb(35, 35, 35);
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  font-size: x-large;
+  font-size: 1.1vw;
   right: 10px;
-  top: 90px;
+  top: 5vh;
   border-radius: 25px;
   border-style: solid;
   border-color: rgba(0, 0, 0, 0.7);
@@ -232,16 +232,12 @@ body {
 }
 
 #proceedCheckout{
-  width: 250px;
-  height: 75px;
+  font-size:1.1vw;
   position: absolute;
-  bottom: 20px;
-  right: 10px;
-  margin-left:23%;
-  left: 10px;
+  bottom: 1vh;
+  margin-left:-5vw;
   color: black;
   background-color: #03DAC5;
-  font-size: 1px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   border-radius: 15px;
@@ -259,14 +255,16 @@ body {
 .checkoutItem{
   text-align: left;
   padding-left: 0px;
+  margin-top:1vh;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  font-size:1.1vw;
 }
 
 .cartButton{
-  height:25px;
-  width:25px; 
-  margin-right:20px;
+  height:1.5vw;
+  width:1.5vw;
+  margin-right:1.5vw;
   border-radius:10px;
   background-color: red;
   color:black;
@@ -276,16 +274,16 @@ body {
   position:relative;
   top: -4px;
   margin-bottom:3px;
-  font-size:15px;
+  font-size:1vw;
 }
 
 .cartButton:hover{
-  height:31px;
-  width:31px;
-  margin-right:14px;
-  margin-bottom:0px;
-  border-radius:15px;
-  font-size:18px;
+  background-color: darkred;
+  height:1.5vw;
+  width:1.5vw;
+  margin-right:1.5vw;
+  border-radius:10px;
+  font-size:1vw;
 }
 
 @keyframes checkoutOpen{
@@ -801,7 +799,7 @@ body {
   position:relative;
   border: 1px solid #888;
   width: 60vw;
-  height:43.5vh;
+  height:44vh;
   font-size: 1.3vw;
 }
 
@@ -1121,16 +1119,31 @@ overflow: scroll;
 
 .cart2 input{
 
-  margin-top: 15px;
-  margin-right: 15px;
+  margin-top: 0.2vw;
+  margin-right: 0.5vw;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
+  font-size: 1.1vw;
   width: auto;
   border-radius: 10px;
-  height: 30px;
-
 }
 
+
+.acceptButton{
+  font-size:1vw;
+}
+
+.cancelButton{
+  font-size:1vw;
+}
+
+#expiryMonth{
+  height:1.3vw;
+  font-size:1vw;
+}
+#expiryYear{
+  height:1.3vw;
+  font-size:1vw;
+}
 
 
 .cart2 option{
@@ -1168,7 +1181,7 @@ overflow: scroll;
 .cart2 label{
  
   color: rgb(187,134,252);
-  font-size: x-large;
+  font-size: 1.6vw;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }  
@@ -1181,10 +1194,16 @@ overflow: scroll;
   font-weight: bold;
 }
 
+
+
+#cartEmpty{
+  font-size:1.8vw;
+}
+
 .CartForm{
   width:100%;
-  padding-left:100px;
-  padding-top:25px;
+  padding-left:3vw;
+  padding-top:2vw;
   padding-right:100px;
   align-content: center;
   background-color: rgb(15,15,15);
